--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+
+*{
+    padding: 0;
+   margin: 0;
+   box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background-color: #000000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.calculator{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#input {
+    padding-top: 20px;
+    padding-right: 20px;
+    width: 100%;
+    max-width: 400px;
+    border-radius: 20px;
+    height: 100px;
+    text-align: right;
+    border: none;
+    color: white;
+    background: transparent;
+    cursor: pointer;
+    box-shadow: 1px 1px 5px orange;
+    margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.cal{
+    padding: 20px;
+    border-radius: 20px;
+    background-color: red;
+
+    box-shadow: -1px -1px 20px orange;
+     background: transparent;
+     overflow:auto;
+     
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+    border: none;
+    padding: 10px;
+    margin: 10px;
+    color: white;
+    height: auto;
+    border-radius: 50%;
+    width: 60px;
+    background: transparent;
+    box-shadow: 4px 4px 10px orange;
 }
